--- a/Playground_Aug/Playground_Aug.ipynb
+++ b/Playground_Aug/Playground_Aug.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "4          12.760          13.153          16.412         579.885        0  "
       ]
      },
-     "execution_count": 183,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "4          12.760          13.153          16.412         579.885        0  "
       ]
      },
-     "execution_count": 184,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
        "Name: product_code, dtype: int64"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,26 +700,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 187,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "C    5765\n",
-       "E    5343\n",
-       "B    5250\n",
-       "D    5112\n",
-       "A    5100\n",
-       "Name: product_code, dtype: int64"
-      ]
-     },
-     "execution_count": 187,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "### - Treat Missing Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# # Opt A. Drop missing values\n",
     "# data = data.dropna()\n",
@@ -732,9 +723,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "C    5765\n",
+       "E    5343\n",
+       "B    5250\n",
+       "D    5112\n",
+       "A    5100\n",
+       "Name: product_code, dtype: int64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check the distribution again\n",
     "data[\"failure\"].value_counts()     # target\n",
@@ -750,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1132,7 @@
        "max        1.000000  "
       ]
      },
-     "execution_count": 192,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1171,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1411,19 +1418,19 @@
        "4          12.760          13.153          16.412         579.885        0  "
       ]
      },
-     "execution_count": 195,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "print(data.shape)\n",
-    "data.head()"
+    "data.head()     # 12183(A), 26570(B)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1693,7 @@
        "4          13.153          16.412         579.885        0  "
       ]
      },
-     "execution_count": 197,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1708,17 +1715,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = data.iloc[:, 0:23]\n",
-    "y = data.loc[:, 'failure']"
+    "X = data.iloc[:, 0:23]  # all features\n",
+    "y = data.loc[:, 'failure']  # target"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1939,20 +1946,20 @@
        "4       -2.156537       -0.708717        1.258467      -61.101841  "
       ]
      },
-     "execution_count": 199,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Mean Centering\n",
-    "centered = X - X.mean()    # Uncomment for Numerzied data B\n",
-    "centered.head()"
+    "X_centered = X - X.mean()\n",
+    "X_centered.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1988,23 +1995,23 @@
    ],
    "source": [
     "# Check Variance\n",
-    "print(centered.var())"
+    "print(X_centered.var())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Covariance matrix\n",
-    "cov = np.dot(centered.T, centered)/(len(centered)-1)\n",
-    "df_cov = pd.DataFrame(cov)"
+    "cov = np.dot(X_centered.T, X_centered)/(len(X_centered)-1)\n",
+    "# df_cov = pd.DataFrame(cov)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2016,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2030,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2051,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -2060,7 +2067,7 @@
        "PCA(n_components=2)"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2073,7 +2080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -2201,7 +2208,7 @@
        "1        0.000534        0.000251       -0.000010       -0.000829  "
       ]
      },
-     "execution_count": 206,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2214,7 +2221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -2288,7 +2295,7 @@
        "4  -61.049528  61.482801"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2311,12 +2318,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split into training and validating\n",
-    "X_train, X_val, y_train, y_val = train_test_split(data_pca, y, test_size=0.33, \n",
+    "PCA_train, PCA_val, y_train, y_val = train_test_split(data_pca, y, test_size=0.33, \n",
     "                                                    random_state=0, stratify=y)"
    ]
   },
@@ -2329,7 +2336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -2345,13 +2352,13 @@
     "from sklearn.svm import LinearSVC\n",
     "\n",
     "LinSVC = LinearSVC(random_state=0)\n",
-    "LinSVC.fit(X_train, y_train)\n",
-    "y_LinSVC = LinSVC.predict(X_val)"
+    "LinSVC.fit(PCA_train, y_train)\n",
+    "y_LinSVC = LinSVC.predict(PCA_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -2360,14 +2367,14 @@
        "0.5390986813685424"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Compute the area under the ROC curve\n",
-    "metrics.roc_auc_score(y_val, y_LinSVC)"
+    "metrics.roc_auc_score(y_val, y_LinSVC)  # 0.452(A), 0.539(B)"
    ]
   },
   {
@@ -2379,20 +2386,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.linear_model import SGDClassifier\n",
     "\n",
     "SGD = SGDClassifier(random_state=0)\n",
-    "SGD.fit(X_train, y_train)\n",
-    "y_SGD = SGD.predict(X_val)"
+    "SGD.fit(PCA_train, y_train)\n",
+    "y_SGD = SGD.predict(PCA_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -2401,14 +2408,14 @@
        "0.530298222660074"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Compute the area under the ROC curve\n",
-    "metrics.roc_auc_score(y_val, y_SGD)"
+    "metrics.roc_auc_score(y_val, y_SGD)     # 0.491(A), 0.530(B)"
    ]
   },
   {
@@ -2420,20 +2427,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
     "KNN = KNeighborsClassifier(n_neighbors=2)\n",
-    "KNN.fit(X_train, y_train)\n",
-    "y_KNN = KNN.predict(X_val)"
+    "KNN.fit(PCA_train, y_train)\n",
+    "y_KNN = KNN.predict(PCA_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -2442,14 +2449,14 @@
        "0.5025630646449516"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Compute the area under the ROC curve\n",
-    "metrics.roc_auc_score(y_val, y_KNN)"
+    "metrics.roc_auc_score(y_val, y_KNN)     # 0.497(A), 0.503(B)"
    ]
   },
   {
@@ -2461,7 +2468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2477,20 +2484,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.svm import SVC\n",
     "\n",
     "SVC = SVC(random_state=0)\n",
-    "SVC.fit(X_train, y_train)\n",
-    "y_SVC = SVC.predict(X_val)"
+    "SVC.fit(PCA_train, y_train)\n",
+    "y_SVC = SVC.predict(PCA_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -2499,14 +2506,14 @@
        "0.5"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Compute the area under the ROC curve\n",
-    "metrics.roc_auc_score(y_val, y_SVC)"
+    "metrics.roc_auc_score(y_val, y_SVC)     # 0.5(A), 0.5(B)"
    ]
   },
   {
@@ -2518,20 +2525,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
     "Ensb = RandomForestRegressor(max_depth=5, random_state=0)\n",
-    "Ensb.fit(X_train, y_train)\n",
-    "y_Ensb = SVC.predict(X_val)"
+    "Ensb.fit(PCA_train, y_train)\n",
+    "y_Ensb = SVC.predict(PCA_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2540,21 +2547,21 @@
        "0.5"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Compute the area under the ROC curve\n",
-    "metrics.roc_auc_score(y_val, y_Ensb)"
+    "metrics.roc_auc_score(y_val, y_Ensb)    # 0.5(A), 0.5(B)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Apply the best-fit model to the testing data"
+    "## 5. Apply The Best-fit Model to The Testing Data"
    ]
   },
   {
