--- a/Playground_Aug/Playground_Aug.ipynb
+++ b/Playground_Aug/Playground_Aug.ipynb
@@ -82,7 +82,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import metrics\n",
     "from sklearn.decomposition import PCA\n",
-    "from sklearn import metrics     # error function : metrics.roc_auc_score()\n",
+    "from sklearn import metrics \n",
     "\n",
     "# Show all the columns and rows\n",
     "pd.set_option(\"display.max_columns\", None)  # columns\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "4          12.760          13.153          16.412         579.885        0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "4          12.760          13.153          16.412         579.885        0  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
        "Name: product_code, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
        "Name: product_code, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
        "max        1.000000  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,12 +1153,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### - cf) Use only measurement features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data = data.loc[:, 'measurement_0':'failure']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Opt A. Drop missing values\n",
+    "# data = data.dropna()\n",
+    "\n",
+    "# # Opt B. Replace missing values with 0\n",
+    "# data = data.fillna(0)\n",
+    "\n",
+    "# # Opt C. Replace missing values with the feature's mean\n",
+    "# data = data.fillna(data.mean())\n",
+    "\n",
+    "# print(data.shape)\n",
+    "# data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### (1) Numerize 'attribute_0' and 'attribute_1'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1168,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1454,7 @@
        "11          15.355          15.175          15.829         792.591        1  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1729,7 @@
        "11          15.355          15.175          15.829         792.591        1  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1716,17 +1751,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = data.iloc[:, 0:23]  # all features\n",
+    "# X = data.iloc[:, 0:18]  # all features\n",
     "y = data.loc[:, 'failure']  # target"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1947,7 +1983,7 @@
        "11       -0.691096        0.170677       -0.635259       91.678758  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1960,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2001,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2012,7 +2048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2024,7 +2060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2038,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2059,7 +2095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2068,7 +2104,7 @@
        "PCA(n_components=2)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2081,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2209,7 +2245,7 @@
        "1        0.000418       -0.000329       -0.000679       -0.004915  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2222,7 +2258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2296,7 +2332,7 @@
        "4  -91.911789  47.134420"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2305,6 +2341,7 @@
     "# Projection (transforming the original data via projection matrix)\n",
     "data_pca = pca.transform(X)\n",
     "data_pca = pd.DataFrame(data_pca, columns = ['PC1', 'PC2']) # rename\n",
+    "# data_pca = pd.DataFrame(data_pca)\n",
     "\n",
     "print(data_pca.shape)\n",
     "data_pca.head()"
@@ -2319,7 +2356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2337,7 +2374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2359,7 +2396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2368,7 +2405,7 @@
        "0.45222492977517614"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2387,7 +2424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2400,7 +2437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2409,7 +2446,7 @@
        "0.49114693584069147"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2428,7 +2465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2441,7 +2478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2450,7 +2487,7 @@
        "0.496913725279594"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2469,7 +2506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2485,7 +2522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2498,7 +2535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2507,7 +2544,7 @@
        "0.5"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2526,7 +2563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2539,7 +2576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2548,7 +2585,7 @@
        "0.5"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
