--- a/Playground_Aug/Playground_Aug.ipynb
+++ b/Playground_Aug/Playground_Aug.ipynb
@@ -2558,7 +2558,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (6) Ensemble Classifiers"
+    "### (6) Ensemble Classifiers _ Randome Forest Regressor"
    ]
   },
   {
@@ -2569,9 +2569,9 @@
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
-    "Ensb = RandomForestRegressor(max_depth=5, random_state=0)\n",
-    "Ensb.fit(PCA_train, y_train)\n",
-    "y_Ensb = SVC.predict(PCA_val)"
+    "EnsbRnd = RandomForestRegressor(max_depth=5, random_state=0)\n",
+    "EnsbRnd.fit(X_train, y_train)\n",
+    "y_EnsbRnd = EnsbRnd.predict(X_val)"
    ]
   },
   {
@@ -2592,7 +2592,37 @@
    ],
    "source": [
     "# Compute the area under the ROC curve\n",
-    "metrics.roc_auc_score(y_val, y_Ensb)    # 0.5(A), 0.5(B), 0.5(C)"
+    "metrics.roc_auc_score(y_val, y_EnsbRnd)     # 0.5(A), 0.5(B), 0.5(C)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (7) Ensemble Classifiers _ Bagging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import BaggingClassifier\n",
+    "\n",
+    "EnsbBag = BaggingClassifier(base_estimator=SVC(), n_estimators=10, random_state=0)\n",
+    "EnsbBag.fit(X_train, y_train)\n",
+    "y_EnsbBag = EnsbBag.predict(X_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute the area under the ROC curve\n",
+    "metrics.roc_auc_score(y_val, y_EnsbBag)"
    ]
   },
   {
