--- a/Playground_Aug/Playground_Aug_scale.ipynb
+++ b/Playground_Aug/Playground_Aug_scale.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "4          12.760          13.153          16.412         579.885        0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "4          12.760          13.153          16.412         579.885        0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
        "max        1.000000  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1377,7 @@
        "max         22.303000       21.626000       23.164000     1312.794000      0.0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1694,7 @@
        "max         21.847000       20.784000       24.094000     1181.998000      1.0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1720,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1731,10 +1731,7 @@
     "# data = data.fillna(0)\n",
     "\n",
     "# # Opt C. Replace missing values with the feature's mean\n",
-    "# data = data.fillna(data.mean())\n",
-    "\n",
-    "# print(data.shape)\n",
-    "# data.head()"
+    "# data = data.fillna(data.mean())"
    ]
   },
   {
@@ -1746,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1757,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1771,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2011,7 +2008,7 @@
        "11          15.355          15.175          15.829         792.591        1  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2023,7 +2020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2046,7 +2043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2080,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2314,7 +2311,7 @@
        "11          15.355          15.175          15.829         792.591        1  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2337,7 +2334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2347,7 +2344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2360,7 +2357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2373,7 +2370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2387,7 +2384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2408,7 +2405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2417,7 +2414,7 @@
        "PCA(n_components=20)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2430,7 +2427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2441,7 +2438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2637,7 +2634,7 @@
        "4  0.505833 -0.823745  0.043336  0.209304 -1.041912  0.826391  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2660,7 +2657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2678,45 +2675,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lucy/Library/Python/3.8/lib/python/site-packages/sklearn/svm/_base.py:1206: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.svm import LinearSVC\n",
+    "# from sklearn.svm import LinearSVC\n",
     "\n",
-    "LinSVC = LinearSVC(random_state=0)\n",
-    "LinSVC.fit(PCA_train, y_train)\n",
-    "y_LinSVC = LinSVC.predict(PCA_val)"
+    "# LinSVC = LinearSVC(random_state=0)\n",
+    "# LinSVC.fit(PCA_train, y_train)\n",
+    "# y_LinSVC = LinSVC.predict(PCA_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Compute the area under the ROC curve\n",
-    "metrics.roc_auc_score(y_val, y_LinSVC)  # 0.5(A)"
+    "# # Compute the area under the ROC curve\n",
+    "# metrics.roc_auc_score(y_val, y_LinSVC)  # 0.5(A), 0.5(B), 0.5(C)"
    ]
   },
   {
@@ -2728,36 +2705,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import SGDClassifier\n",
+    "# from sklearn.linear_model import SGDClassifier\n",
     "\n",
-    "SGD = SGDClassifier(random_state=0)\n",
-    "SGD.fit(PCA_train, y_train)\n",
-    "y_SGD = SGD.predict(PCA_val)"
+    "# SGD = SGDClassifier(random_state=0)\n",
+    "# SGD.fit(PCA_train, y_train)\n",
+    "# y_SGD = SGD.predict(PCA_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Compute the area under the ROC curve\n",
-    "metrics.roc_auc_score(y_val, y_SGD)     # 0.5(A)"
+    "# # Compute the area under the ROC curve\n",
+    "# metrics.roc_auc_score(y_val, y_SGD)     # 0.5(A), 0.5(B), 0.5(C)"
    ]
   },
   {
@@ -2769,36 +2735,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "# from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
-    "KNN = KNeighborsClassifier(n_neighbors=2)\n",
-    "KNN.fit(PCA_train, y_train)\n",
-    "y_KNN = KNN.predict(PCA_val)"
+    "# KNN = KNeighborsClassifier(n_neighbors=2)\n",
+    "# KNN.fit(PCA_train, y_train)\n",
+    "# y_KNN = KNN.predict(PCA_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.4989788870540183"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Compute the area under the ROC curve\n",
-    "metrics.roc_auc_score(y_val, y_KNN)     # 0.499(A)"
+    "# # Compute the area under the ROC curve\n",
+    "# metrics.roc_auc_score(y_val, y_KNN)     # 0.499(A), 0.499(B), 0.5(C)"
    ]
   },
   {
@@ -2810,7 +2765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2826,36 +2781,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.svm import SVC\n",
+    "# from sklearn.svm import SVC\n",
     "\n",
-    "SVC = SVC(random_state=0)\n",
-    "SVC.fit(PCA_train, y_train)\n",
-    "y_SVC = SVC.predict(PCA_val)"
+    "# SVC = SVC(random_state=0)\n",
+    "# SVC.fit(PCA_train, y_train)\n",
+    "# y_SVC = SVC.predict(PCA_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Compute the area under the ROC curve\n",
-    "metrics.roc_auc_score(y_val, y_SVC)     # 0.5(A)"
+    "# # Compute the area under the ROC curve\n",
+    "# metrics.roc_auc_score(y_val, y_SVC)     # 0.5(A), 0.5(B), 0.5(C)"
    ]
   },
   {
@@ -2867,7 +2811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2880,7 +2824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2889,14 +2833,18 @@
        "0.5652117485421729"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Compute the area under the ROC curve\n",
-    "metrics.roc_auc_score(y_val, y_EnsbRnd)     # 0.565(A)"
+    "metrics.roc_auc_score(y_val, y_EnsbRnd)     \n",
+    "\n",
+    "# max_depth=4 : 0.581(C)\n",
+    "# max_depth=5 : 0.565(A), 0.577(B), 0.584(C)\n",
+    "# max_depth=6 : 0.581(C)"
    ]
   },
   {
@@ -2908,37 +2856,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.svm import SVC\n",
-    "from sklearn.ensemble import BaggingClassifier\n",
+    "# from sklearn.svm import SVC\n",
+    "# from sklearn.ensemble import BaggingClassifier\n",
     "\n",
-    "EnsbBag = BaggingClassifier(base_estimator=SVC(), n_estimators=10, random_state=0)\n",
-    "EnsbBag.fit(PCA_train, y_train)\n",
-    "y_EnsbBag = EnsbBag.predict(PCA_val)"
+    "# EnsbBag = BaggingClassifier(base_estimator=SVC(), n_estimators=10, random_state=0)\n",
+    "# EnsbBag.fit(PCA_train, y_train)\n",
+    "# y_EnsbBag = EnsbBag.predict(PCA_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Compute the area under the ROC curve\n",
-    "metrics.roc_auc_score(y_val, y_EnsbBag)     # 0.5(A)"
+    "# # Compute the area under the ROC curve\n",
+    "# metrics.roc_auc_score(y_val, y_EnsbBag)     # 0.5(A), 0.5(B), 0.5(C)"
    ]
   },
   {
